# PPIL_Paint

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  TODO
include/: Circle.hpp  Polygon.hpp  Shape.hpp  Triangle.hpp  VisitorDraw.hpp  VisitorDrawNetwork.hpp
src/: CMakeLists.txt  SocketDrawClient.hpp  main.cpp  test_Vecteur2D.cpp
src/COR/CORImportCustom/: ImporterCustom.hpp  ImporterCustomCircle.hpp  ImporterCustomGroup.hpp  ImporterCustomPolygon.hpp  ImporterCustomPolygone.hpp  ImporterCustomSegment.hpp  ImporterCustomTriangle.hpp
src/Shapes/: Circle.hpp  Group.hpp  Polygon.hpp  Polygone.hpp  Segment.hpp  Shape.hpp  Triangle.hpp
src/Utils/: Erreur.hpp  Matrice2x2.hpp  SocketDrawClient.hpp  Transform.hpp  Vecteur2D.cpp  Vecteur2D.hpp  WindowProperties.hpp
src/Visitors/: VisitorDrawNetwork.hpp  VisitorExportCustom.hpp  VisitorShape.hpp
