add_executable(PPIL_Paint_client
	#Header
	Visitors/VisitorShape.hpp
	Visitors/VisitorDrawNetwork.hpp
	Visitors/VisitorExportCustom.hpp
	Utils/Matrice2x2.hpp
	Utils/Vecteur2D.hpp
	Utils/SocketDrawClient.hpp
	Utils/Erreur.hpp
	Utils/WindowProperties.hpp
	Shapes/Circle.hpp
	Shapes/Polygone.hpp
	Shapes/Segment.hpp
	Shapes/Shape.hpp
	Shapes/Triangle.hpp
	Shapes/Group.hpp
	COR/CORImportCustom/ImporterCustom.hpp
	COR/CORImportCustom/ImporterCustomCircle.hpp
	COR/CORImportCustom/ImporterCustomPolygone.hpp
	COR/CORImportCustom/ImporterCustomTriangle.hpp
	COR/CORImportCustom/ImporterCustomSegment.hpp
	COR/CORImportCustom/ImporterCustomGroup.hpp

	#Source
	main.cpp
	Utils/Vecteur2D.cpp
)